--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "clsx": "^2.1.1",
     "next": "14.2.18",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-toastify": "^11.0.3"
   },
   "devDependencies": {
     "@types/node": "^20",
